opt-level = "z", default config correction, and types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ liblambdashell = { path = "../liblambdashell" }
 
 [profile.release]
 strip = true
-opt-level = "s"
+opt-level = "z"
 lto = true
 codegen-units = 1
