rename to libpse and flag `nosandbox`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
-liblambdashell = { path = "../liblambdashell" }
+libpse = { path = "../libpse" }
 
 [profile.release]
 strip = true
